@@ -77,11 +77,12 @@ def example_01(dsname, source, ofname, events, evskip, plotim, verbos):
     suffix = source.replace(":","-").replace(".","-") #.lower()
     prefix = '%s-%s-r%04d-e%06d-%s' % (ofname, env.experiment(), evt.run(), counter, suffix)
 
-    #det.save_txtnda('%s-ave.txt' % prefix, arr_ave, fmt='%.2f', verbos=True)
-    #det.save_txtnda('%s-max.txt' % prefix, arr_max, fmt='%.2f', verbos=True)
+    cmts = ['DATASET  %s' % dsname, 'STATISTICS  %d' % counter]        
 
-    det.save_asdaq('%s-ave.txt' % prefix, arr_ave, fmt='%.2f', verbos=True)
-    det.save_asdaq('%s-max.txt' % prefix, arr_max, fmt='%.2f', verbos=True)
+    addmetad=True # for now it does not matter for CSPAD(2x2) 
+
+    det.save_asdaq('%s-ave.txt' % prefix, arr_ave, cmts + ['ARR_TYPE  average'], '%.2f', verbos, addmetad)
+    det.save_asdaq('%s-max.txt' % prefix, arr_max, cmts + ['ARR_TYPE  maximum'], '%.2f', verbos, addmetad)
 
     if det.is_cspad2x2() :
         from PSCalib.GeometryObject import two2x1ToData2x2 #, data2x2ToTwo2x1
@@ -98,7 +99,9 @@ def usage() :
     return '\n\nExample of command to average n-d array from detector source and save it in file:\n'+\
            '\n         %prog -d <dataset> [-s <source>] [-f <file-prefix>]'+\
            ' [-n <events-collect>] [-m <events-skip>] [-p] [-v]'+\
-           '\n  ex1:   %prog -d exp=cxif5315:run=169 -s CxiDs2.0:Cspad.0 -f nda-cspad -n 100 -m 0 -p -v'
+           '\n  ex1:   %prog -d exp=cxif5315:run=169 -s CxiDs2.0:Cspad.0 -n 100 -f nda-abc -m 0 -p -v'+\
+           '\n  ex2:   %prog -d exp=cxif5315:run=169 -s CxiDs2.0:Cspad.0 -n 100 -v'+\
+           '\n  ex3:   %prog -d exp=amo86615:run=159 -s Camp.0:pnCCD.1 -n 100 -v'
 
 ##-----------------------------
 
@@ -107,10 +110,10 @@ def input_options_parser() :
     dsname_def = 'exp=cxif5315:run=169'
     source_def = 'CxiDs2.0:Cspad.0'
     ofname_def = 'nda'
-    events_def = 100
+    events_def = 10000000
     evskip_def = 0
-    plotim_def = True       
-    verbos_def = True       
+    plotim_def = False       
+    verbos_def = False       
 
     h_dsname = 'dataset name, default = %s' % dsname_def
     h_source = 'input ndarray file name, default = %s' % source_def
@@ -126,8 +129,8 @@ def input_options_parser() :
     parser.add_option('-f', '--ofname', dest='ofname', default=ofname_def, action='store', type='string', help=h_ofname)
     parser.add_option('-n', '--events', dest='events', default=events_def, action='store', type='int',    help=h_events)
     parser.add_option('-m', '--evskip', dest='evskip', default=evskip_def, action='store', type='int',    help=h_evskip)
-    parser.add_option('-p', '--plotim', dest='plotim', default=plotim_def, action='store_false',          help=h_plotim)
-    parser.add_option('-v', '--verbos', dest='verbos', default=verbos_def, action='store_false',          help=h_verbos)
+    parser.add_option('-p', '--plotim', dest='plotim', default=plotim_def, action='store_true',           help=h_plotim)
+    parser.add_option('-v', '--verbos', dest='verbos', default=verbos_def, action='store_true',           help=h_verbos)
  
     (opts, args) = parser.parse_args()
     return (opts, args)
